<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Licensed to the Apache Software Foundation (ASF) under one or more
  ~ contributor license agreements.  See the NOTICE file distributed with
  ~ this work for additional information regarding copyright ownership.
  ~ The ASF licenses this file to You under the Apache License, Version 2.0
  ~ (the "License"); you may not use this file except in compliance with
  ~ the License.  You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.apache.shardingsphere</groupId>
        <artifactId>shardingsphere-distribution</artifactId>
        <version>5.2.1-SNAPSHOT</version>
    </parent>
    
    <artifactId>shardingsphere-proxy-native-distribution</artifactId>
    
    <properties>
        <native.image.name>apache-shardingsphere-proxy-native</native.image.name>
        <native.image.repository>apache/shardingsphere-proxy-native</native.image.repository>
        <exec-maven-plugin.version>3.1.0</exec-maven-plugin.version>
        <native.maven.plugin.version>0.9.14</native.maven.plugin.version>
    </properties>
    
    <dependencies>
        <dependency>
            <groupId>org.apache.shardingsphere</groupId>
            <artifactId>shardingsphere-proxy-bootstrap</artifactId>
            <version>${project.version}</version>
        </dependency>
        
        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
            <scope>compile</scope>
        </dependency>
        
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <scope>runtime</scope>
        </dependency>
        
        <dependency>
            <groupId>org.opengauss</groupId>
            <artifactId>opengauss-jdbc</artifactId>
            <scope>runtime</scope>
        </dependency>
        
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <scope>runtime</scope>
        </dependency>
    </dependencies>
    
    <profiles>
        <profile>
            <id>native</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <version>${maven-compiler-plugin.version}</version>
                        <configuration>
                            <source>17</source>
                            <target>17</target>
                            <compilerArgument>--enable-preview</compilerArgument>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.graalvm.buildtools</groupId>
                        <artifactId>native-maven-plugin</artifactId>
                        <version>${native.maven.plugin.version}</version>
                        <extensions>true</extensions>
                        <configuration>
                            <imageName>${native.image.name}</imageName>
                            <mainClass>org.apache.shardingsphere.proxy.Bootstrap</mainClass>
                            <fallback>false</fallback>
                            <verbose>true</verbose>
                            <buildArgs>
                                <arg>--report-unsupported-elements-at-runtime</arg>
                            </buildArgs>
                            <jvmArgs>
                                <arg>--enable-preview</arg>
                            </jvmArgs>
                            <metadataRepository>
                                <enabled>true</enabled>
                            </metadataRepository>
                        </configuration>
                        <executions>
                            <execution>
                                <id>build-native</id>
                                <goals>
                                    <goal>compile-no-fork</goal>
                                </goals>
                                <phase>package</phase>
                            </execution>
                            <execution>
                                <id>test-native</id>
                                <goals>
                                    <goal>test</goal>
                                </goals>
                                <phase>test</phase>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>docker.native</id>
            <properties>
                <proxy.image.repository>${native.image.repository}</proxy.image.repository>
                <proxy.image.tag>${project.version}</proxy.image.tag>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>${exec-maven-plugin.version}</version>
                        <executions>
                            <execution>
                                <id>build</id>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <phase>package</phase>
                                <configuration>
                                    <executable>docker</executable>
                                    <arguments>
                                        <argument>build</argument>
                                        <argument>--pull</argument>
                                        <argument>--build-arg</argument>
                                        <argument>APP_NAME=${native.image.name}</argument>
                                        <argument>.</argument>
                                    </arguments>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>docker.buildx.push.native</id>
            <properties>
                <proxy.image.platform>linux/amd64,linux/arm64</proxy.image.platform>
                <proxy.image.repository>${native.image.repository}</proxy.image.repository>
                <proxy.image.tag>${project.version}</proxy.image.tag>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>${exec-maven-plugin.version}</version>
                        <executions>
                            <execution>
                                <id>create builder</id>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <phase>package</phase>
                                <configuration>
                                    <executable>docker</executable>
                                    <arguments>
                                        <argument>buildx</argument>
                                        <argument>create</argument>
                                        <argument>--use</argument>
                                        <argument>--driver</argument>
                                        <argument>docker-container</argument>
                                        <argument>--name</argument>
                                        <argument>shardingsphere-builder</argument>
                                        <argument>--platform</argument>
                                        <argument>${proxy.image.platform}</argument>
                                    </arguments>
                                </configuration>
                            </execution>
                            <execution>
                                <id>build</id>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <phase>package</phase>
                                <configuration>
                                    <executable>docker</executable>
                                    <arguments>
                                        <argument>buildx</argument>
                                        <argument>build</argument>
                                        <argument>--pull</argument>
                                        <argument>--platform</argument>
                                        <argument>${proxy.image.platform}</argument>
                                        <argument>--build-arg</argument>
                                        <argument>APP_NAME=${native.image.name}</argument>
                                        <argument>.</argument>
                                    </arguments>
                                </configuration>
                            </execution>
                            <execution>
                                <id>push</id>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <phase>package</phase>
                                <configuration>
                                    <executable>docker</executable>
                                    <arguments>
                                        <argument>buildx</argument>
                                        <argument>build</argument>
                                        <argument>--push</argument>
                                        <argument>--platform</argument>
                                        <argument>${proxy.image.platform}</argument>
                                        <argument>--build-arg</argument>
                                        <argument>APP_NAME=${native.image.name}</argument>
                                        <argument>.</argument>
                                        <argument>-t</argument>
                                        <argument>${proxy.image.repository}:${proxy.image.tag}</argument>
                                        <argument>-t</argument>
                                        <argument>${proxy.image.repository}:latest</argument>
                                    </arguments>
                                </configuration>
                            </execution>
                            <execution>
                                <id>cleanup builder</id>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <phase>package</phase>
                                <configuration>
                                    <executable>docker</executable>
                                    <arguments>
                                        <argument>buildx</argument>
                                        <argument>rm</argument>
                                        <argument>shardingsphere-builder</argument>
                                    </arguments>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
